--- a/src/main/resources/fxml/Ventas/DocumentosDeVentas.fxml
+++ b/src/main/resources/fxml/Ventas/DocumentosDeVentas.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.ProveedorController">
    <children>
       <AnchorPane layoutX="63.0" layoutY="63.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
