--- a/src/main/resources/fxml/RecursosHumanos/Roles/RolesBotones.fxml
+++ b/src/main/resources/fxml/RecursosHumanos/Roles/RolesBotones.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
     
 </AnchorPane>
