--- a/src/main/resources/fxml/RecursosHumanos/Roles/Roles.fxml
+++ b/src/main/resources/fxml/RecursosHumanos/Roles/Roles.fxml
@@ -33,8 +33,8 @@
             <Button layoutX="129.0" layoutY="79.0" mnemonicParsing="false" text="Button" />
             <TableView layoutX="14.0" layoutY="180.0" prefHeight="202.0" prefWidth="224.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
+                <TableColumn prefWidth="75.0" text="Rol ID" />
+                <TableColumn prefWidth="148.0" text="Descripción" />
               </columns>
             </TableView>
             <Button layoutX="144.0" layoutY="485.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
