--- a/src/main/resources/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
+++ b/src/main/resources/fxml/Ventas/DocumentosDeVenta/DocumentosDeVenta.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -22,11 +15,11 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.DocumentosDeVentaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.DocumentosDeVentaController">
    <children>
       <AnchorPane layoutX="63.0" layoutY="63.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="3.0" layoutY="2.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="531.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane layoutX="3.0" layoutY="2.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="82.0" layoutY="10.0" text="Búsqueda">
@@ -96,9 +89,9 @@
             <Insets />
          </opaqueInsets>
       </AnchorPane>
-      <AnchorPane layoutX="313.0" layoutY="63.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="313.0" layoutY="63.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="749.0" AnchorPane.bottomAnchor="532.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="749.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="133.0" layoutY="10.0" text="Documento de venta:">
@@ -166,7 +159,7 @@
                      </font>
                   </Label>
                   <TextField layoutX="119.0" layoutY="136.0" prefHeight="25.0" prefWidth="604.0" />
-                  <TableView layoutX="12.0" layoutY="176.0" prefHeight="189.0" prefWidth="722.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="176.0">
+                  <TableView layoutX="12.0" layoutY="176.0" prefHeight="177.0" prefWidth="722.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="174.0">
                     <columns>
                       <TableColumn prefWidth="62.0" text="Cant." />
                         <TableColumn prefWidth="97.0" text="Unidad Medida" />
@@ -213,7 +206,7 @@
                   <TextField editable="false" layoutX="601.0" layoutY="444.0" prefHeight="13.0" prefWidth="120.0" />
                   <TextField editable="false" layoutX="601.0" layoutY="471.0" prefHeight="13.0" prefWidth="120.0" />
                   <TextField editable="false" layoutX="601.0" layoutY="498.0" prefHeight="13.0" prefWidth="120.0" />
-                  <TextArea editable="false" layoutX="72.0" layoutY="425.0" prefHeight="95.0" prefWidth="303.0" />
+                  <TextArea editable="false" layoutX="72.0" layoutY="425.0" prefHeight="95.0" prefWidth="303.0" AnchorPane.bottomAnchor="2.0" AnchorPane.topAnchor="425.0" />
                   <Label layoutX="12.0" layoutY="405.0" text="Observación:">
                      <font>
                         <Font size="14.0" />
