--- a/src/main/resources/fxml/Ventas/Pedidos/AgregarProductos.fxml
+++ b/src/main/resources/fxml/Ventas/Pedidos/AgregarProductos.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.AgregarProductosController">
    <children>
       <TableView layoutX="24.0" layoutY="167.0" prefHeight="131.0" prefWidth="496.0" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="167.0">
          <columns>
@@ -50,20 +49,20 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
-            <TextField layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
-            <ComboBox layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="126.0" />
-            <DatePicker layoutX="369.0" layoutY="67.0" prefHeight="25.0" prefWidth="126.0" />
+            <TextField fx:id="codProducto" layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
+            <TextField fx:id="tipoProducto" layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
+            <ComboBox fx:id="catProducto" layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="126.0" />
+            <DatePicker fx:id="fAdqui" layoutX="369.0" layoutY="67.0" prefHeight="25.0" prefWidth="126.0" />
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
          </children>
       </AnchorPane>
-      <Button layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+      <Button fx:id="buscarProd" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
       <Label layoutX="307.0" layoutY="318.0" text="Cantidad">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="408.0" layoutY="314.0" prefHeight="20.0" prefWidth="111.0" />
-      <Button layoutX="458.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
+      <TextField fx:id="cantProd" layoutX="408.0" layoutY="314.0" prefHeight="20.0" prefWidth="111.0" />
+      <Button fx:id="agregarYregresar" layoutX="458.0" layoutY="352.0" mnemonicParsing="false" onAction="#volverParent" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
    </children>
 </AnchorPane>
