--- a/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
+++ b/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
@@ -202,7 +202,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="producto" layoutX="225.0" layoutY="45.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Button fx:id="agregarProdProf" layoutX="487.0" layoutY="47.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="+">
+                        <Button fx:id="agregarProdProf" layoutX="487.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="Agregar Producto">
                            <font>
                               <Font size="10.0" />
                            </font>
