--- a/src/main/resources/fxml/Ventas/Proveedores/Proveedores.fxml
+++ b/src/main/resources/fxml/Ventas/Proveedores/Proveedores.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -31,38 +30,26 @@
             </AnchorPane>
             <AnchorPane layoutX="40.0" layoutY="84.0" prefHeight="202.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <TextField fx:id="dni_busqueda" layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Button layoutX="176.0" layoutY="164.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
-                  <Label layoutX="12.0" layoutY="30.0" prefHeight="21.0" prefWidth="114.0" text="R.U.C.:">
+                  <Button layoutX="176.0" layoutY="134.0" mnemonicParsing="false" onAction="#buscar_proveedor" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <Label layoutX="12.0" layoutY="53.0" prefHeight="21.0" prefWidth="114.0" text="R.U.C.:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox layoutX="130.0" layoutY="130.0" prefHeight="25.0" prefWidth="106.0" />
-                  <TextField fx:id="ruc_busqueda" layoutX="130.0" layoutY="28.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Label layoutX="12.0" layoutY="64.0" prefHeight="21.0" prefWidth="114.0" text="D.N.I.:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="12.0" layoutY="136.0" text="Estado:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <TextField fx:id="ruc_busqueda" layoutX="130.0" layoutY="51.0" prefHeight="25.0" prefWidth="106.0" />
                   <Label layoutX="12.0" layoutY="97.0" prefHeight="21.0" prefWidth="114.0" text="Nombre:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="130.0" layoutY="94.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="nombre_busqueda" layoutX="130.0" layoutY="94.0" prefHeight="25.0" prefWidth="106.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="29.0" layoutY="253.0" prefHeight="319.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="253.0">
+            <AnchorPane layoutX="29.0" layoutY="226.0" prefHeight="346.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="226.0">
                <children>
-                  <TableView layoutX="12.0" layoutY="9.0" prefHeight="240.0" prefWidth="225.0">
+                  <TableView layoutX="12.0" layoutY="10.0" prefHeight="239.0" prefWidth="225.0">
                      <columns>
-                        <TableColumn prefWidth="99.66666412353516" text="RUC/DNI" />
+                        <TableColumn prefWidth="99.66666412353516" text="RUC" />
                         <TableColumn prefWidth="124.0" text="Proveedor" />
                      </columns>
                   </TableView>
