--- a/src/main/resources/fxml/Ventas/Pedidos/Pedidos.fxml
+++ b/src/main/resources/fxml/Ventas/Pedidos/Pedidos.fxml
@@ -143,7 +143,7 @@
                   </Label>
                   <RadioButton fx:id="tipoDocBoleta" layoutX="108.0" layoutY="44.0" mnemonicParsing="false" text="Boleta" />
                   <RadioButton fx:id="tipoDocFactura" layoutX="188.0" layoutY="44.0" mnemonicParsing="false" text="Factura" />
-                  <TextField layoutX="99.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
+                  <TextField fx:id="clienteSh" layoutX="99.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
                   <TextField editable="false" layoutX="370.0" layoutY="12.0" prefHeight="25.0" prefWidth="160.0" />
                   <TextField editable="false" layoutX="607.0" layoutY="12.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="296.0" layoutY="42.0" text="R.U.C.:">
@@ -158,7 +158,7 @@
                      </font>
                   </Label>
                   <TextField fx:id="dni" layoutX="607.0" layoutY="40.0" prefHeight="25.0" prefWidth="120.0" />
-                  <DatePicker layoutX="143.0" layoutY="68.0" prefHeight="25.0" prefWidth="135.0" />
+                  <DatePicker fx:id="fechaPed" layoutX="143.0" layoutY="68.0" prefHeight="25.0" prefWidth="135.0" />
                   <DatePicker layoutX="421.0" layoutY="68.0" prefHeight="25.0" prefWidth="135.0" />
                   <TextField editable="false" layoutX="99.0" layoutY="96.0" prefHeight="25.0" prefWidth="120.0" />
                   <TextField editable="false" layoutX="421.0" layoutY="96.0" prefHeight="25.0" prefWidth="120.0" />
