--- a/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
+++ b/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
@@ -172,7 +172,7 @@
                      <content>
                         <AnchorPane prefHeight="291.0" prefWidth="222.0">
                            <children>
-                              <Button fx:id="generarPed" layoutX="89.0" layoutY="67.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="N" />
+                              <Button fx:id="generarPed" layoutX="89.0" layoutY="67.0" mnemonicParsing="false" onAction="#handleGenerarPedido" prefHeight="40.0" prefWidth="40.0" text="N" />
                               <Button fx:id="EliminarProf" layoutX="89.0" layoutY="150.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
                               <Label layoutX="63.0" layoutY="109.0" text="Generar Pedido">
                                  <font>
