--- a/src/main/resources/fxml/Materiales/Productos/Productos.fxml
+++ b/src/main/resources/fxml/Materiales/Productos/Productos.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -24,8 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductosController">
+<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductosController">
     <children>
         <AnchorPane prefHeight="575.0" prefWidth="1000.0">
            <children>
@@ -39,26 +32,27 @@
                    <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
                 </children>
             </Pane>
-             <Label layoutX="14.0" layoutY="68.0" prefHeight="21.0" prefWidth="114.0" text="Código producto">
+             <Label layoutX="18.0" layoutY="70.0" prefHeight="21.0" prefWidth="114.0" text="Código producto">
                 <font>
                    <Font size="14.0" />
                 </font>
              </Label>
-             <Label layoutX="14.0" layoutY="106.0" prefHeight="21.0" prefWidth="114.0" text="ID de producto">
+             <Label layoutX="18.0" layoutY="102.0" prefHeight="21.0" prefWidth="114.0" text="Nombre">
                 <font>
                    <Font size="14.0" />
                 </font>
              </Label>
-             <TextField fx:id="codProd" layoutX="130.0" layoutY="68.0" prefHeight="25.0" prefWidth="106.0" />
-             <TextField fx:id="idProd" layoutX="130.0" layoutY="106.0" prefHeight="25.0" prefWidth="106.0" />
-             <TableView fx:id="tablaProductos" layoutX="12.0" layoutY="222.0" prefHeight="245.0" prefWidth="224.0">
+             <TextField fx:id="codigo_producto_buscar" layoutX="141.0" layoutY="68.0" prefHeight="25.0" prefWidth="87.0" />
+             <TextField fx:id="nombre_producto_buscar" layoutX="142.0" layoutY="100.0" prefHeight="25.0" prefWidth="87.0" />
+             <TableView fx:id="tablaProductos" layoutX="12.0" layoutY="241.0" prefHeight="269.0" prefWidth="224.0">
                <columns>
-                 <TableColumn fx:id="codigoProducto" prefWidth="118.0" text="Código de producto" />
-                 <TableColumn fx:id="categoriaProducto" prefWidth="105.0" text="Categoría" />
+                 <TableColumn fx:id="columna_codigo" prefWidth="55.0" text="Código" />
+                 <TableColumn fx:id="columna_nombre" prefWidth="87.0" text="Nombre" />
+                  <TableColumn fx:id="columna_descripcion" prefWidth="87.0" text="Descripción" />
                </columns>
              </TableView>
-             <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" onAction="#CargarProductos" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-             <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
+             <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+             <AnchorPane fx:id="tipo_producto_formulario" layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
                 <children>
                    <TabPane layoutY="56.0" prefHeight="522.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
                      <tabs>
@@ -126,7 +120,7 @@
                                         <content>
                                            <AnchorPane prefHeight="239.0" prefWidth="175.0">
                                               <children>
-                                                 <Button layoutX="68.0" layoutY="47.0" mnemonicParsing="false" onAction="#abrirIngresarProductoARack" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="47.0" />
+                                                 <Button layoutX="68.0" layoutY="47.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="47.0" />
                                                  <Button layoutX="68.0" layoutY="161.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
                                                  <Label layoutX="67.0" layoutY="115.0" text="Ingresar" />
                                                  <Label layoutX="61.0" layoutY="220.0" text="Movimiento" />
@@ -269,14 +263,14 @@
                 </children>
             </AnchorPane>
              <Line endX="100.0" layoutX="118.0" layoutY="49.0" startX="-100.0" />
-            <TextField fx:id="cateProd" layoutX="128.0" layoutY="182.0" prefHeight="25.0" prefWidth="106.0" />
-            <TextField fx:id="tipoProd" layoutX="128.0" layoutY="144.0" prefHeight="25.0" prefWidth="106.0" />
-            <Label layoutX="12.0" layoutY="182.0" prefHeight="21.0" prefWidth="114.0" text="Categoria">
+            <CheckBox fx:id="perecible_busqueda" layoutX="136.0" layoutY="172.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="96.0" text="Perecible">
                <font>
                   <Font size="14.0" />
                </font>
-            </Label>
-            <Label layoutX="12.0" layoutY="144.0" prefHeight="21.0" prefWidth="114.0" text="Tipo de producto">
+            </CheckBox>
+            <Button layoutX="137.0" layoutY="201.0" mnemonicParsing="false" onAction="#buscar_tipo_producto" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <TextField fx:id="peso_producto_buscar" layoutX="141.0" layoutY="135.0" prefHeight="25.0" prefWidth="87.0" />
+            <Label layoutX="18.0" layoutY="137.0" prefHeight="21.0" prefWidth="114.0" text="Peso">
                <font>
                   <Font size="14.0" />
                </font>
